welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^SnakeBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^